# blood-money

./: Cargo.toml  LICENSE  README.md
catalog/: items.json
src/: battle_net_api_client.rs  main.rs  realm_reader.rs  thread_throttler.rs
templates/: base.html  index.html  prices.html
