[package]
name = "blood-money"
version = "0.1.0"
authors = ["hyena <hyena@users.noreply.github.com>"]

[dependencies]
hyper = "*"
iron = "*"
regex = "0.1"
router = "*"
regex = "*"
# rustc-serialize = "0.3"  # Remove this after the real solution is done.
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"  # just for the example, not required in general
scoped_threadpool = "0.1.7"
tera = "0.4.1"
